queryExecutor ready for testing